# module-zip

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: copilot-review.yml
docs/: mainpage.dox.tmpl
patches/: openssl-3.2-fix.patch
qlib/ZipDataProvider/: ZipAddFilesDataProvider.qc  ZipArchiveDataProvider.qc  ZipArchiveInfoDataProvider.qc  ZipCompressDataDataProvider.qc  ZipCreateArchiveDataProvider.qc  ZipDataDataProvider.qc  ZipDataProvider.qc  ZipDataProvider.qm  ZipDataProviderFactory.qc  ZipDataProviderTypes.qc  ZipDecompressDataDataProvider.qc  ZipExtractArchiveDataProvider.qc  ZipExtractFileDataProvider.qc  ZipFileDataProvider.qc  ZipListArchiveDataProvider.qc
src/: QC_ZipEntry.qpp  QC_ZipFile.h  QC_ZipFile.qpp  QC_ZipInputStream.h  QC_ZipInputStream.qpp  QC_ZipOutputStream.h  QC_ZipOutputStream.qpp  QoreZipFile.cpp  QoreZipFile.h  ZipInputStream.cpp  ZipInputStream.h  ZipOutputStream.cpp  ZipOutputStream.h  zip-module.cpp  zip-module.h
test/: ZipDataProvider.qtest  zip.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh
